# statsforecast

./: .all-contributorsrc  .gitattributes  .gitconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  THIRD_PARTY_LICENSES.md  adapters.mdx  adapters.prophet.html.mdx  adapters.prophet.mdx  arima.html.mdx  arima.mdx  ces.html.mdx  ces.mdx  core.mdx  distributed.fugue.mdx  distributed.mdx  distributed.multiprocess.html.mdx  distributed.multiprocess.mdx  docs.json  environment.yml  ets.html.mdx  ets.mdx  feature_engineering.html.mdx  feature_engineering.mdx  final-formatting.bash  garch.html.mdx  garch.mdx  index.html  index.html.mdx  index.mdx  listings.json  (+18 more)
.github/: ai-triage-prompt.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-issue.yml  feature-request.yml
.github/workflows/: ai-triage.yml  build-docs.yaml  bulk-triage.yml  ci.yaml  cla.yml  deploy.yaml  lint.yaml  mintlify-update.yaml  no-response.yaml  pytest.yaml  pytest.yml  python-publish.yml  release-drafter.yml  test-publish.yml
Developments/Ensemble model/: ensemble_m4 ARIMA-ETS-CES-THETA models.ipynb  ensemble_m4 ARIMA-ETS-CES-THETA.ipynb  ensemble_m4 ARIMA-ETS-CES.ipynb  ensemble_m4.ipynb
action_files/: clean_equations  clean_nbs  conformal_predictions.py  conftest.py  docs-final-formatting.bash  docs_replace_imgs.py  environment_windows_py36.yml  final-formatting.bash  imports_with_code.py  lint  nbdev_test  test_conformal_predictions.py  test_dask.py  test_efficiency.py  test_fit_predict.py  test_ray.py  test_spark.py  update_index.py  utils.py
blog/: index.html  index.mdx  index.xml
dev/: .help.mk  Dockerfile  Dockerfile-Conda  Makefile  environment.yml  local_environment.yml  requirements.txt
docs/: AutoArima_vs_Prophet.html  Contributing.html  Diagnostics.html  Exogenous.html  ForecastingAtScale.html  Gemfile  Getting_Started_with_Auto_Arima_and_ETS.html  Installation.html  NonDailyData.html  Outliers.html  UncertaintyIntervals.html  _config.yml  adapters.prophet.html  adapters.prophet.html.md  arima.html  arima.html.md  ces.html.md  convert_to_mkdocstrings.py  core.html  distributed.multiprocess.html.md  ets.html  ets.html.md  forecast_evaluation_supply_chain_framework.md  fugue_backend.html  index.html  mfles.html.md  models.html  sidebar.json  theta.html.md  to_mdx.py  utils.html  utils.html.md
docs/_data/: topnav.yml
docs/contribute/: contribute.html  contribute.mdx  docs.html  docs.mdx  issue-labels.html  issue-labels.html.mdx  issue-labels.mdx  issues.html  issues.mdx  step-by-step.html  step-by-step.html.mdx  step-by-step.mdx  techstack.html  techstack.html.mdx  techstack.mdx
docs/distributed/: dask.html  dask.html.mdx  ray.html  ray.html.mdx  ray.mdx  spark.html  spark.html.mdx  spark.mdx
docs/experiments/: AmazonStatsForecast.mdx  AutoArima_vs_Prophet.mdx  ETS_ray_m5.mdx  Prophet_spark_m5.mdx  amazonstatsforecast.html  amazonstatsforecast.html.mdx  autoarima_vs_prophet.html  autoarima_vs_prophet.html.mdx  autoarimaprophet_adapter.html.mdx  ets_ray_m5.html  (+3 more)
examples/: AutoArima_vs_Prophet.ipynb  Forecasting_with_Auto_Arima_&_ETS_.ipynb  Getting_Started_with_Auto_Arima_and_ETS.ipynb  NonDailyData.ipynb  arima.ipynb  environment.yml
include/: arima.h  ets.h  export.h  nelder_mead.h
markdown-site/: index.md
nbs/: .gitignore  _quarto.yml  adapters.prophet.ipynb  arima.ipynb  ces-ets.ipynb  ces.ipynb  core.ipynb  custom.yml  distributed.core.ipynb  distributed.fugue.ipynb  distributed.multiprocess.ipynb  distributed.ray.ipynb  distributed.utils.ipynb  ets.ipynb  etsTargetFunction.ipynb  etscalc.ipynb  fugue_backend.ipynb  garch.ipynb  hierarchical.ipynb  index.ipynb  mint.json  models.ipynb  mstl.ipynb  navigation.json  nbdev.yml  sidebar.yml  styles.css  t_model.ipynb  tbats.ipynb  theta.ipynb  utils.ipynb
scripts/: cli.ipynb  cli.py  cvt.py  extract_test.sh  filter_licenses.py
src/: adapters.prophet.html  adapters.prophet.html.mdx  arima.cpp  arima.html  arima.html.mdx  ces.cpp  ces.html  ces.html.mdx  config.html  distributed.core.html  distributed.core.html.mdx  distributed.multiprocess.html  distributed.multiprocess.html.mdx  distributed.utils.html  distributed.utils.html.mdx  ets.cpp  ets.html  ets.html.mdx  feature_engineering.html  feature_engineering.html.mdx  garch.cpp  garch.html  garch.html.mdx  mfles.cpp  mfles.html  mfles.html.mdx  mstl.html  mstl.html.mdx  optim.cpp  ses.cpp  statsforecast.cpp  tbats.cpp  tbats.html  tbats.html.mdx  theta.cpp  theta.html  theta.html.mdx  ucm.cpp  utils.html  utils.html.mdx
statsforecast/: __init__.py  _lib.py  _modidx.py  _nbdev.py  arima.py  ces.py  config.py  core.py  ets.py  etsTargetFunction.py  etscalc.py  feature_engineering.py  fugue_backend.py  garch.py  hierarchical.py  mfles.py  models.py  mstl.py  tbats.py  theta.py  utils.py
tbats_files/: README.md  models.ipynb  tbats.ipynb  tbats_functions.R  tbats_main.R
tests/: conftest.py  test_adapters.prophet.py  test_adapters_prophet.py  test_arima.py  test_ces.py  test_core.py  test_csp.py  test_distributed.core.py  test_distributed.fugue.py  test_distributed.multiprocess.py  test_distributed_core.py  test_distributed_fugue.py  test_distributed_multiprocess.py  test_distributions.py  test_ets.py  test_feature_engineering.py  test_garch.py  test_issue_1032.py  test_mfles.py  test_models.py  test_msarimax.py  test_mstl.py  test_simulation.py  test_simulation_distributions.py  test_simulation_warning.py  test_synthetic_generator.py  test_tbats.py  test_theta.py  test_ucm.py  test_utils.py
tutorial/: Arch modelo.ipynb  AutoCes.ipynb  AutoETS.ipynb  AutoRegressive.ipynb  AutoTheta.ipynb  Autoarima_nixtla.ipynb  Dynamic Optimized Theta.ipynb  Garch modelo Nixtla.ipynb  Holt Method.ipynb  Holt Winters Method.ipynb  Optimized Theta Model.ipynb  Seasonal Expone Smoothing Optimized.ipynb  Seasonal Exponential Smoothing.ipynb  Simple Exponential Optimized.ipynb  Simple Exponential Smoothing.ipynb  arima.ipynb
(+695 files in other folders)
