[project]
name = "statsforecast"
version = "1.7.6.99"
requires-python = ">=3.8"
dependencies = [
    "cloudpickle",
    "coreforecast>=0.0.12",
    "fugue>=0.8.1",
    "numba>=0.55.0",
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "scipy>=1.7.3",
    "statsmodels>=0.13.2",
    "threadpoolctl",
    "tqdm",
    "utilsforecast>=0.1.4",
]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
description = "Time series forecasting suite using statistical models"
authors = [{ name = "Nixtla", email = "business@nixtla.io" }]
readme = "README.md"
keywords = ["time-series", "forecasting", "arima", "ets"]

[project.optional-dependencies]
dask = ["fugue[dask]>=0.8.1"]
plotly = ["plotly", "plotly-resampler"]
polars = ["polars[numpy]"]
ray = ["fugue[ray]>=0.8.1", "protobuf>=3.15.3,<4", "numpy<2", "ray<2.8"]
spark = ["fugue[spark]>=0.8.1"]
dev = [
    "black",
    "datasetsforecast",
    "fire",
    "flake8",
    "fugue[dask,ray,spark]>=0.8.1",
    "mypy",
    "nbdev<2.3.26",
    "nbformat",
    "nbdev_plotly",
    "pandas[plot]",
    "plotly",
    "plotly-resampler",
    "pmdarima",
    "polars[numpy]",
    "pre-commit",
    "prophet",
    "protobuf>=3.15.3,<4",
    "pyarrow",
    "ray<2.8",
    "scikit-learn",
    "setuptools<70",
    "supersmoother",
]

[project.entry-points.nbdev]
statsforecast = "statsforecast._modidx:d"

[project.urls]
homepage = "https://nixtla.github.io/statsforecast"
documentation = "https://nixtla.github.io/statsforecast"
repository = "https://github.com/Nixtla/statsforecast"

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"
sdist.exclude = ["action_files", "dev", "experiments", "nbs", "settings.ini"]
sdist.reproducible = true
wheel.packages = ["statsforecast"]

[tool.cibuildwheel]
build-verbosity = 3
test-command = "python -c 'import statsforecast._lib'"

[tool.ruff]
target-version = "py38"
line-length = 88
lint.select = ["F"]

[tool.mypy]
ignore_missing_imports = true
